# lorezu_repo_scout

./: .gitignore  PYPI_PUBLISHING.md  README.md  mkdocs.yml  pyproject.toml
docs/: ARCH.md  cli.md  configuration.md  index.md  running.md  todos.json
src/scout/: __init__.py
src/scout/.config/: default.toml
src/scout/cli/: app.py
src/scout/cli/commands/: init.py  scan_github.py  scan_path.py
src/scout/cli/ui/: __init__.py  console.py  formatters.py  progress.py  tui.py
src/scout/core/: config.py  engine.py  errors.py  matcher.py  models.py  policy.py  redaction.py
src/scout/rules/: loader.py  schema.json  schema_validate.py  validators.py
src/scout/rules/builtins/: default.yaml
src/scout/scanners/: fs_scanner.py  git_scanner.py
src/scout/scanners/github/: __init__.py  api.py  clone.py  filters.py  scan.py
