[project]
name = "repo-scout"
version = "0.1.0"
description = "Prevent accidental secret leaks by scanning repos for risky files and patterns"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Pritama Kumar Nayak"}
]
keywords = [
    "security",
    "secrets",
    "scanning",
    "github",
    "git",
    "secrets-detection",
    "security-audit",
    "ci-cd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic-settings>=2.0.0",  # Good for CLI config management
    "pyyaml>=6.0.0",             # For config files
    "rich>=13.0.0",              # For pretty output
    "pydantic>=2.0.0",           # For data models
    "pydantic-core>=2.0.0",      # For data model validation
    "httpx>=0.27.0",             # For GitHub API
    "textual>=6.11.0",           # For TUI output
]

[project.urls]
Homepage = "https://github.com/Pritam-N/lorezu_repo_scout"  # TODO: Update with actual URL
Documentation = "https://github.com/Pritam-N/lorezu_repo_scout"  # TODO: Update with actual URL
Repository = "https://github.com/Pritam-N/lorezu_repo_scout"  # TODO: Update with actual URL
Issues = "https://github.com/Pritam-N/lorezu_repo_scout/issues"  # TODO: Update with actual URL

[project.optional-dependencies]
schema = ["jsonschema>=4.21.0"]

[project.scripts]
# This creates the actual terminal command
scout = "scout.cli.app:app"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"] # pycodestyle, pyflakes, isort, pyupgrade

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/scout"]

[tool.hatch.build.targets.wheel.force-include]
"src/scout/rules/builtins" = "scout/rules/builtins"
"src/scout/rules/schema.json" = "scout/rules/schema.json"

[build-system]
requires = ["hatchling"]  # or "poetry-core"
build-backend = "hatchling.build"
